# Tracey

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tracey_syntax.md
lib/assimp-5.3.1/: CMakeLists.txt
lib/clom2/: clom2.hpp
lib/glfw-3.3.8/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.3.8/src/: Makefile  cmake_install.cmake  glfw_config.h
scenes/: example.blend  example.blend1  example.glb  example.tracey  example1.glb  example2.glb  example3.glb  example4.glb  example4.tracey  example5.glb  example5.tracey
src/: clom.hpp  glfw.hpp  glm.hpp  main.cpp
src/lib/: assimp.hpp  clom.cpp  clom.hpp  glfw.hpp  glfw_callbacks.cpp  glfw_callbacks.hpp  glm.hpp  stb.hpp  stb_image.cpp  stb_image_write.cpp
src/tracey/engine/: accelerator.cpp  accelerator.hpp  bvh.cpp  bvh.hpp  console.cpp  console.hpp  engine.cpp  engine.hpp  importer.cpp  importer.hpp  input_package.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp  user_config.cpp  user_config.hpp  viewer.cpp  viewer.hpp  voxel_accel.cpp  voxel_accel.hpp  window_manager.cpp  window_manager.hpp
src/tracey/geometry/: box.cpp  box.hpp  camera.cpp  camera.hpp  intersection.cpp  intersection.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  ray.cpp  ray.hpp  shape.cpp  shape.hpp
src/tracey/geometry/lights/: lights.hpp  point_light.cpp  point_light.hpp  sun_light.cpp  sun_light.hpp
src/tracey/geometry/shapes/: ground_plane.cpp  ground_plane.hpp  shapes.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/tracey/graphics/: attribute.hpp  brdfs.cpp  brdfs.hpp  buffer.hpp  color_spaces.cpp  color_spaces.hpp  environment_texture.cpp  environment_texture.hpp  image_read_write.cpp  image_read_write.hpp  material.cpp  material.hpp  shader.cpp  shader.hpp  shader_data.hpp  shader_pack.cpp  shader_pack.hpp
src/tracey/graphics/shaders/: shader_syntax.hpp  shaders.cpp  shaders.hpp
src/tracey/random/: xoshiro256plus.hpp
src/tracey/scene/: scene.cpp  scene.hpp
src/tracey/util/: math_util.cpp  math_util.hpp  normal_dist.cpp  normal_dist.hpp  parser.cpp  parser.hpp  random.hpp  xoshiro256plus.cpp  xoshiro256plus.hpp
